# msc-cuda

./: .gitignore  .prof-suite  CMakeLists.txt  Makefile  Makefile.build  README.md
data/matrices/: in_5x5.txt  out_5x5.txt
data/nvprof/: summary01.csv  summary01.nvprof  summary01.txt
data/results/: 2000_20130813.csv  4000_20130813.csv  8000_20130812.csv  plain_20130829.csv
doc/: .gitignore  CMakeLists.txt  Doxyfile.in
doc/doxygen/: Doxyfile.in
doc/fun13/extabst/: Makefile  extabst.sty  extabst.tex
doc/fun13/extabst/tex/: 010.abstract.tex  011.acronyms.tex  100.intro.tex  200.case-study.tex  300.hetplats.tex  400.method.tex  900.conclusions.tex
doc/fun13/poster/: acks.docx  hetplats.docx  msr.docx  title.docx
doc/shared/: common.sty
doc/shared/bib/: all.bib
doc/thesis/: Makefile  thesis.sty  thesis.tex
doc/thesis/tex/: 001.acknowledgements.tex  010.abstract.tex  011.resumo.tex  012.acronyms.tex  100.intro.tex  200.case_study.tex  300.multicore.tex  400.mic.tex  500.cuda.tex  900.conclusions.tex  909.future_work.tex
examples/: 5x5.txt  p5x5.txt
include/cuk/: hw_meter.hpp  stopwatch  string.hpp
include/cuk/mach/: stopwatch.hpp
include/cuk/posix/: stopwatch.hpp
include/msc/: cuda  cuda.hpp  matrix.hpp
include/msc/core/cpu/: blockify.h  copy.h  unblockify.h
include/msc/core/gpu/: block  block.cuh  point  point.cuh
include/msc/cuda/: array.hpp  core  core.hpp  device.hpp  error  error.hpp
include/msc/cuda/exceptions/: no_device  no_device.hpp
include/msc/cuda/linear_algebra/block1d/: apy  apy.cuh  bartel_stewart.cuh  gemm  gemm.cuh  gemv  gemv.cuh  trpaisv  trpaisv.cuh  trsv  trsv.cuh  trsyl  trsyl.cuh
include/msc/cuda_bits/: device  device.hpp
include/msc/linear_algebra/: back_substitution  back_substitution.hpp
include/msc/matrix/: arma  arma.hpp  print  print.hpp
script/python/: colorize.py  kbest.py  prof-sizes.py  prof-threads.py
src/: CMakeLists.txt  main.cpp  main.cu  main_options.cpp  main_options.h
src/arma/: CMakeLists.txt
src/arma/arma2plain/: CMakeLists.txt  main.cpp  main_options.cpp  main_options.h
src/arma/arma2plain/float/: CMakeLists.txt
src/cuda/: cuda.cpp
test/: CMakeLists.txt  gtest_working.cpp
test/core/: CMakeLists.txt  gpu-block.cu  gpu-point.cu
test/cuda/: CMakeLists.txt
test/cuda/linear_algebra/: CMakeLists.txt
test/cuda/linear_algebra/block1d/: CMakeLists.txt  apy.cu  gemm.cu  gemv.cu  trpaisv.cu  trsv.cu  trsyl.cu
test/linear_algebra/: CMakeLists.txt  back_substitution.cpp
test/matrix/: back_substituion.cpp
test/nvidia/: CMakeLists.txt  device_query.cpp
tests/: CMakeLists.txt
tests/nvidia/: CMakeLists.txt
tools/: CMakeLists.txt  echo.cpp
tools/device_query/: CMakeLists.txt  main.cpp
tools/generators/: CMakeLists.txt  main_options.cpp  main_options.h  upper_triangular.cpp
tools/square/: CMakeLists.txt  main.cpp  main_options.cpp  main_options.h
